Changing project name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img id="user-image" src="Images/icon.png">
                 <h1> Juana AI </h1>
                 <p> 
-                    Juana AI is a Filipino AI Chatbot <br>
+                    Juana is a Simple Chatbot <br>
                     Developed by <a href="https://facebook.com/ronie.casaclang"> Ronie Casaclang </a>
                 </p>
                 <p class="chat-time-and-date"> Version 1.0 • November 2023 </p>
